added main page content

--- a/public/img/favicon-16x16.png/index.html
+++ b/public/img/favicon-16x16.png/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head><script src="/hugo-portfolio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=hugo-portfolio/livereload" data-no-instant defer></script>
-  <title>Categories · charliexshafer</title>
+  <title>Favicon 16x16.png · charliexshafer</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="color-scheme" content="light dark">
@@ -17,12 +17,12 @@
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Categories">
+  <meta name="twitter:title" content="Favicon 16x16.png">
   <meta name="twitter:description" content="Charlie Shafer&#39;s personal website">
 
-<meta property="og:url" content="http://localhost:1313/hugo-portfolio/categories/">
+<meta property="og:url" content="http://localhost:1313/hugo-portfolio/img/favicon-16x16.png/">
   <meta property="og:site_name" content="charliexshafer">
-  <meta property="og:title" content="Categories">
+  <meta property="og:title" content="Favicon 16x16.png">
   <meta property="og:description" content="Charlie Shafer&#39;s personal website">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
@@ -30,7 +30,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/hugo-portfolio/categories/">
+<link rel="canonical" href="http://localhost:1313/hugo-portfolio/img/favicon-16x16.png/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -71,7 +71,7 @@
 <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
 
-<link rel="alternate" type="application/rss+xml" href="/hugo-portfolio/categories/index.xml" title="charliexshafer" />
+<link rel="alternate" type="application/rss+xml" href="/hugo-portfolio/img/favicon-16x16.png/index.xml" title="charliexshafer" />
 
 
 
@@ -113,7 +113,7 @@
   <section class="container taxonomy">
   <header>
     <h1 class="title">
-      <a class="title-link" href="http://localhost:1313/hugo-portfolio/categories/">Categories</a>
+      <a class="title-link" href="http://localhost:1313/hugo-portfolio/img/favicon-16x16.png/">Favicon 16x16.png</a>
     </h1>
   </header>
   
